# plasma-stock-perf

./: CHANGELOG  CMakeLists.txt  INSTALL  README  config.h.in
applet/: CMakeLists.txt  footer_item.cpp  footer_item.h  header_item.cpp  header_item.h  overall_stock_item.cpp  overall_stock_item.h  plasma-applet-stock-perf.desktop  plasma-applet-stock-quote.desktop  plasma_stock_quote.cpp  plasma_stock_quote.h  plasma_stock_quote_config.ui  stock_config.cpp  stock_config.h  stock_data.cpp  stock_data.h  stock_item.cpp  stock_item.h  stock_parser.cpp  stock_parser.h  stock_parser_boursorama.cpp  stock_parser_boursorama.h
dataengine/: CMakeLists.txt  plasma-dataengine-stockquote.desktop  stock_quote_engine.cpp  stock_quote_engine.h
